testing #skip stuff 12

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -36,13 +36,15 @@ jobs:
     runs-on: ubuntu-20.04
     permissions:
       contents: write
+    env:
+      CONTAINS_NO_SKIP: ${{ ! contains(join(toJson(github.event.commits.*.message)), '#skip') }}
     steps:
       - uses: actions/checkout@v3
         with:
           ref: ${{ github.event.pull_request.merge_commit_sha }}
           fetch-depth: '0'
       - name: Bump version and push tag
-        if: ${{ ! contains(join(toJson(github.event.commits.*.message)), '#skip') }}
+        if: ${{ env.CONTAINS_NO_SKIP }}
         uses: anothrNick/github-tag-action@1.64.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
