--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -6,13 +6,27 @@ on:
       - closed
 
 jobs:
-  production_deployment:
+  tag_release:
     runs-on: ubuntu-20.04
-    env:
-      CONTAINS_NO_SKIP: ${{ ! contains(join(toJson(github.event.commits.*.message)), '#skip') }}
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.merge_commit_sha }}
+          fetch-depth: '0'
+      - name: Bump version and push tag
+        if: ${{ github.event.pull_request.merged == true && ! contains(join(toJson(github.event.commits.*.message)), '#skip') }}
+        uses: anothrNick/github-tag-action@1.67.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DEFAULT_BUMP: patch
+
+  production_deployment:
+    needs: [tag_release]
+    runs-on: ubuntu-20.04
     steps:
       - name: Deploy to production
-        if: ${{ github.event.pull_request.merged == true && env.CONTAINS_NO_SKIP}}
         uses: johnbeynon/render-deploy-action@v0.0.8
         with:
           service-id: 'srv-clb7icaqviqc73cluu1g'
