--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -15,3 +15,22 @@ jobs:
         with:
           service-id: 'srv-clb7icaqviqc73cluu1g'
           api-key: ${{ secrets.RENDER_TOKEN }}
+      - name: Check the deployed service URL
+        uses: jtalk/url-health-check-action@v3
+        with:
+          # Check the following URLs one by one sequentially
+          url: https://poka-cola-2.onrender.com
+          # Follow redirects, or just report success on 3xx status codes
+          follow-redirect: false # Optional, defaults to "false"
+          # Fail this action after this many failed attempts
+          max-attempts: 3 # Optional, defaults to 1
+          # Delay between retries
+          retry-delay: 5s # Optional, only applicable to max-attempts > 1
+          # Retry all errors, including 404. This option might trigger curl upgrade.
+          retry-all: false # Optional, defaults to "false"
+          # String representation of cookie attached to health check request.
+          # Format: `Name=Value`
+          # cookie: "token=asdf1234" # Optional, default is empty
+          # Basic auth login password pair.
+          # Format: `login:password`
+          # basic-auth: "login:password" # Optional, default is empty
