--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -15,6 +15,10 @@ jobs:
         with:
           service-id: 'srv-clb7icaqviqc73cluu1g'
           api-key: ${{ secrets.RENDER_TOKEN }}
+  health_check:
+    runs-on: ubuntu-20.04
+    needs: [production_deployment]
+    steps:
       - name: Check the deployed service URL
         uses: jtalk/url-health-check-action@v3
         with:
